[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
authors = [{ name = "Elias Obeid", email = "elias.obeid9.02@gmail.com" }]
name = "cf_util"
version = "0.1.0"
description = "A python tool to help install accepted submission from codeforces.com."
readme = "README.md"
license = { file = "LICENSE.md" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.0"
dependencies = ["bs4", "requests"]

[project.urls]
"Homepage" = "https://github.com"
"Bug Tracker" = "https://github.com"
